Follow up to bug 466730, use local folder compactor to compact local folders (as opposed to offline folder compactor), also try to fix crash referenced in bug 473970. r/sr=Standard8